@@ -2,6 +2,10 @@
 #include "CREPixmap.h"
 #include <QtGui>
 
+extern "C" {
+#include "global.h"
+}
+
 CRESmoothFaceMaker::CRESmoothFaceMaker()
 {
     QApplication::setOverrideCursor(QCursor(Qt::WaitCursor));
@@ -85,15 +89,40 @@ void CRESmoothFaceMaker::makeSmooth()
     device.setBackground(QColor(0, 0, 0, 0));
 
     long spots[] = {
-        0b000000000, 0b001001001, 0b000000111, 0b001001111,
-        0b100100100, 0b101101101, 0b100100111, 0b101101111,
-        0b111000000, 0b111001001, 0b111000111, 0b111001111,
-        0b111100100, 0b111101101, 0b111100111, 0b111101111,
-        0b000000000, 0b000000001, 0b000000100, 0b000000101,
-        0b100000000, 0b100000001, 0b100000100, 0b100000101,
-        0b001000000, 0b001000001, 0b001000100, 0b001000101,
-        0b101000000, 0b101000001, 0b101000100, 0b101000101
+        0x0,    /* 0b000000000 */
+        0x49,   /* 0b001001001 */
+        0x7,    /* 0b000000111 */
+        0x4f,   /* 0b001001111 */
+        0x124,  /* 0b100100100 */
+        0x16d,  /* 0b101101101 */
+        0x127,  /* 0b100100111 */
+        0x16f,  /* 0b101101111 */
+        0x1c0,  /* 0b111000000 */
+        0x1c9,  /* 0b111001001 */
+        0x1c7,  /* 0b111000111 */
+        0x1cf,  /* 0b111001111 */
+        0x1e4,  /* 0b111100100 */
+        0x1ed,  /* 0b111101101 */
+        0x1e7,  /* 0b111100111 */
+        0x1ef,  /* 0b111101111 */
+        0x0,    /* 0b000000000 */
+        0x1,    /* 0b000000001 */
+        0x4,    /* 0b000000100 */
+        0x5,    /* 0b000000101 */
+        0x100,  /* 0b100000000 */
+        0x101,  /* 0b100000001 */
+        0x104,  /* 0b100000100 */
+        0x105,  /* 0b100000101 */
+        0x40,   /* 0b001000000 */
+        0x41,   /* 0b001000001 */
+        0x44,   /* 0b001000100 */
+        0x45,   /* 0b001000101 */
+        0x140,  /* 0b101000000 */
+        0x141,  /* 0b101000001 */
+        0x144,  /* 0b101000100 */
+        0x145,  /* 0b101000101 */
     };
+
 
     int sx, sy, sw, sh, dx, dy, spot;
     for (int x = 0; x < 16; x++) {
